--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
@@ -27,18 +27,31 @@ else
                 {
                     <tr>
                         <th scope="row" class="text-center align-middle">@(i + 1)</th>
+
                         <td class="align-middle">@Model[i].Title</td>
 
                         <td class="text-center align-middle">
-                            <a class="btn btn-success modalBtn" data-model-id="@Model[i].Id" data-bs-toggle="modal" data-bs-target="#approveBookModal">
+                            <button onclick="onModalBtnClick('@Model[i].Id', 'approveBookIdInput')"
+                                    class="btn btn-success modalBtn"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#approveBookModal">
                                 <i class="fa-solid fa-circle-check fa-xl px-2"></i>
-                            </a>
+                            </button>
                         </td>
                         <td class="text-center align-middle">
-                            <a class="btn btn-danger modalBtn" data-model-id="@Model[i].Id" data-bs-toggle="modal" data-bs-target="#deleteBookModal"><i class="fa-solid fa-trash-can fa-xl px-2"></i></a>
+                            <button class="btn btn-danger modalBtn"
+                                    data-model-id="@Model[i].Id"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#deleteBookModal">
+                                <i class="fa-solid fa-trash-can fa-xl px-2"></i>
+                            </button>
                         </td>
                         <td class="text-center align-middle">
-                            <a asp-area="admin" asp-controller="Book" asp-action="CurrentBook" asp-route-bookId="@Model[i].Id" class="btn btn-success">
+                            <a asp-area="admin"
+                               asp-controller="Book"
+                               asp-action="CurrentBook"
+                               asp-route-bookId="@Model[i].Id"
+                               class="btn btn-success">
                                 <i class="fa-solid fa-expand fa-xl px-2"></i>
                             </a>
                         </td>
@@ -50,12 +63,11 @@ else
 }
 
 <!-- Approve Book Modal -->
-<div
-    class="modal fade"
-    id="approveBookModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade"
+     id="approveBookModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -67,7 +79,7 @@ else
             <div class="modal-footer">
                 <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                 <form method="post" asp-area="admin" asp-controller="Book" asp-action="ApproveBook">
-                    <input type="hidden" name="bookId" class="modelIdInput" value="" />
+                    <input type="hidden" name="bookId" class="approveBookIdInput" value="" />
                     <button type="submit" class="btn btn-danger">Approve</button>
                 </form>
             </div>
@@ -76,12 +88,11 @@ else
 </div>
 
 <!-- Delete Book Modal -->
-<div
-    class="modal fade"
-    id="deleteBookModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade"
+     id="deleteBookModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -101,8 +112,8 @@ else
     </div>
 </div>
 
-@section Scripts{
+@section Scripts {
     <script src="~/js/modal.js"></script>
-    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
     <script src="~/js/datatable.js"></script>
+    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
 }
