--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/UnapprovedQuotes.cshtml
@@ -1,15 +1,61 @@
 ﻿@model QuoteListingViewModel
 
 @{
-    ViewData["Title"] = "Unapproved Quotes";
     ViewData["Area"] = "admin";
+    ViewData["Title"] = "Unapproved Quotes";
+    ViewData["ModalId"] = "approveQuoteModal";
 }
 
-<partial name="PartialViews/_AdminQuotesPartial" />
+<partial name="PartialViews/Quotes/_QuotesTablePartial" />
 
-<partial name="PartialViews/Modals/_ApproveQuoteModalPartial" />
+<div class="modal fade"
+     id="approveQuoteModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Approve quote</h3>
+            </div>
+            <div class="modal-body text-center">
+                Are you sure you want to approve this quote?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                <form method="post" asp-area="admin" asp-controller="Quote" asp-action="ApproveQuote">
+                    <input type="hidden" name="quoteId" class="approveQuoteIdInput" value="" />
+                    <button type="submit" class="btn btn-danger">Approve</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-<partial name="PartialViews/Modals/_DeleteQuoteModalPartial" />
+<div class="modal fade"
+     id="deleteQuoteModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Delete quote</h3>
+            </div>
+            <div class="modal-body text-center fs-5">
+                Are you sure you want to delete this quote?
+            </div>
+            <div class="modal-footer">
+                <form method="post" asp-area="admin" asp-controller="Quote" asp-action="Delete">
+                    <input type="hidden" name="quoteId" class="deleteQuoteIdInput" value="" />
+                    <button type="submit" class="btn btn-danger btn-lg border-2 border-dark px-5">
+                        Delete
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts {
     <script src="~/js/modal.js"></script>
