--- a/Web/Bookworm.Web/Views/Book/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Edit.cshtml
@@ -18,19 +18,23 @@
             <span asp-validation-for="Title" class="small text-danger"></span>
         </div>
 
-        <div class="form-group mt-4">
-            <label asp-for="LanguageId"><strong>Select Language</strong></label>
-            <select asp-for="LanguageId" size="10" aria-label="size 5 select example" class="form-select form-control">
-                @await Component.InvokeAsync("Languages", new { selectedLanguageId = Model.LanguageId })
-            </select>
+        <div class="d-flex justify-content-center gap-3">
+            <div class="form-group mt-4 w-50">
+                <label asp-for="LanguageId"><strong>Select Language</strong></label>
+                <select asp-for="LanguageId" size="10" aria-label="size 5 select example" class="form-select form-control">
+                    @await Component.InvokeAsync("Languages", new { selectedLanguageId = Model.LanguageId })
+                </select>
+            </div>
+
+            <div class="form-group mt-4 w-50">
+                <label asp-for="CategoryId"><strong>Select Category</strong></label>
+                <select asp-for="CategoryId" size="10" aria-label="size 5 select example" class="form-select form-control">
+                    @await Component.InvokeAsync("Categories", new { selectedCategoryId = Model.CategoryId })
+                </select>
+            </div>
         </div>
 
-        <div class="form-group mt-4">
-            <label asp-for="CategoryId"><strong>Select Category</strong></label>
-            <select asp-for="CategoryId" size="10" aria-label="size 5 select example" class="form-select form-control">
-                @await Component.InvokeAsync("Categories", new { selectedCategoryId = Model.CategoryId })
-            </select>
-        </div>
+        
 
         <div class="form-group mt-4">
             <label asp-for="PagesCount"><strong>Number of Pages</strong></label>
