--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -1,6 +1,4 @@
-﻿@using static Bookworm.Common.Quotes.QuotesDataConstants;
-
-@model QuoteListingViewModel
+﻿@model QuoteListingViewModel
 
 @{
     this.ViewData["Title"] = "My Quotes";
@@ -12,99 +10,35 @@
 
 <partial name="PartialViews/_TitleCardPartial" />
 
-@if (Model.Quotes.Count() == 0)
-{
-    <h3 class="text-center mt-5 display-3">You haven't uploaded any quotes!</h3>
-}
-else
-{
-    <partial name="PartialViews/Quotes/_QuotesStatusFilterPartial" />
-    <partial name="PartialViews/Quotes/_QuotesTypeFilterPartial" />
-    <partial name="PartialViews/Quotes/_QuotesSortingPartial" />
-    <partial name="PartialViews/Quotes/_QuotesSearchPartial" />
-
-    <div class="table-responsive my-3">
-        <table class="table table-bordered table-hover fs-5">
-            <thead>
-                <tr>
-                    <th class="text-center align-middle" scope="col">#</th>
-                    <th class="text-center align-middle" scope="col">Content</th>
-                    <th class="text-center align-middle" scope="col">Author</th>
-                    <th class="text-center align-middle" scope="col">Movie</th>
-                    <th class="text-center align-middle" scope="col">Book</th>
-                    <th class="text-center align-middle" scope="col">Likes</th>
-                    <th class="text-center align-middle" scope="col">Is Approved</th>
-                    <th class="text-center align-middle" scope="col">Edit</th>
-                    <th class="text-center align-middle" scope="col">Delete</th>
-                </tr>
-            </thead>
-            <tbody class="table-body">
-                @for (int i = 0; i <= Model.Quotes.Count() - 1; i++)
-                {
-                    <tr>
-                        <td class="align-middle text-center">@((Model.PageNumber - 1) * QuotesPerPage + (i + 1))</td>
-                        <td class="align-middle">@Model.Quotes[i].Content</td>
-                        @if (@Model.Quotes[i].AuthorName != null)
-                        {
-                            <td class="text-center align-middle">@Model.Quotes[i].AuthorName</td>
-                        }
-                        else
-                        {
-                            <td class="text-center align-middle"><i class="fa-solid fa-minus fa-xl"></i></td>
-                        }
-                        @if (@Model.Quotes[i].MovieTitle != null)
-                        {
-                            <td class="text-center align-middle">@Model.Quotes[i].MovieTitle</td>
-                        }
-                        else
-                        {
-                            <td class="text-center align-middle"><i class="fa-solid fa-minus fa-xl"></i></td>
-                        }
-                        @if (@Model.Quotes[i].BookTitle != null)
-                        {
-                            <td class="text-center align-middle">@Model.Quotes[i].BookTitle</td>
-                        }
-                        else
-                        {
-                            <td class="text-center align-middle"><i class="fa-solid fa-minus fa-xl"></i></td>
-                        }
-                        <td class="text-center align-middle">@Model.Quotes[i].Likes</td>
-                        <td class="text-center align-middle">
-                            @if (Model.Quotes[i].IsApproved)
-                            {
-                                <i class="fa-solid fa-circle-check fa-xl checkIcon"></i>
-                            }
-                            else
-                            {
-                                <i class="fa-regular fa-circle-xmark fa-xl x-icon"></i>
-                            }
-                        </td>
-                        <td class="text-center align-middle">
-                            <a asp-area=""
-                               asp-controller="Quote"
-                               asp-action="Edit"
-                               asp-route-id="@Model.Quotes[i].Id"
-                               class="btn btn-outline-warning">
-                                <i class="fa-solid fa-pen-to-square fa-xl"></i>
-                            </a>
-                        </td>
-                        <td class="text-center align-middle">
-                            <button onclick="onModalBtnClick(@Model.Quotes[i].Id, 'deleteQuoteIdInput')"
-                                    class="btn btn-outline-danger modalBtn"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#deleteQuoteModal">
-                                <i class="fa-solid fa-trash-can fa-xl"></i>
-                            </button>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
+<partial name="PartialViews/Quotes/_QuotesTablePartial" />
 
 <partial name="PartialViews/_PaginationPartial" />
-<partial name="PartialViews/Modals/_DeleteQuoteModalPartial" />
+
+<div class="modal fade"
+     id="deleteQuoteModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete quote</h1>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
+            </div>
+            <div class="modal-body text-center fs-5">
+                Are you sure you want to delete this quote?
+            </div>
+            <div class="modal-footer">
+                <form method="post" asp-area="" asp-controller="Quote" asp-action="Delete">
+                    <input type="hidden" name="quoteId" class="deleteQuoteIdInput" value="" />
+                    <button type="submit" class="btn btn-danger btn-lg border-2 border-dark px-5">
+                        Delete<i class="fa fa-trash-can ms-2"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts {
     <script src="~/js/modal.js"></script>
