--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteBookModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteBookModalPartial.cshtml
@@ -6,18 +6,18 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Book</h1>
+                <h3 class="modal-title" id="exampleModalLabel">Delete Book</h3>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center fs-5">
                 Are you sure you want to delete this book?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-                    Close
-                </button>
                 <form method="post" asp-controller="Book" asp-action="Delete">
                     <input type="hidden" name="bookId" value=@Model.Id />
-                    <button type="submit" class="btn btn-danger">Delete</button>
+                    <button type="submit" class="btn btn-danger btn-lg border-2 border-dark px-5">
+                        Delete<i class="fa fa-trash-can ms-2"></i>
+                    </button>
                 </form>
             </div>
         </div>
