--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteCommentModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteCommentModalPartial.cshtml
@@ -6,19 +6,19 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Comment</h1>
+                <h3 class="modal-title" id="exampleModalLabel">Delete Comment</h3>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
             </div>
-            <div class="modal-body fs-5">
+            <div class="modal-body text-center fs-5">
                 Are you sure you want to delete your comment?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary px-5 fs-5" data-bs-dismiss="modal">
-                    Close
-                </button>
                 <form method="post" asp-controller="Comment" asp-action="Delete">
-                    <input type="hidden" name="deleteCommentId" class="modelIdInput" value="" />
                     <input type="hidden" name="bookId" value=@Model.Id />
-                    <button type="submit" class="btn btn-danger px-5 fs-5">Delete</button>
+                    <input type="hidden" name="deleteCommentId" class="modelIdInput" value="" />
+                    <button type="submit" class="btn btn-danger btn-lg border-2 border-dark px-5">
+                        Delete<i class="fa fa-trash-can ms-2"></i>
+                    </button>
                 </form>
             </div>
         </div>
