--- a/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/Web/Bookworm.Web/wwwroot/css/site.css
@@ -24,22 +24,25 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     gap: 1rem;
     border: solid 2px black;
     border-radius: 15px;
-    padding: 1rem 0;
+    padding: 2rem 0.5rem;
     margin-bottom: 2rem;
+    background-color: #34495E;
 }
 
     .quotesContainer .card {
         flex-basis: 32%;
-        border: solid 2px black;
+        border: solid 3px var(--clr-secondary);
         display: flex;
         flex-direction: column;
+        height: 17rem;
     }
 
         .quotesContainer .card .card-header {
-            border-bottom: solid 2px black;
+            border-bottom: solid 3px var(--clr-secondary);
             display: flex;
             justify-content: space-between;
         }
@@ -133,11 +136,8 @@ body {
 /*Modal*/
 .modal-header {
     background-color: var(--clr-primary);
+    color: white;
 }
-
-    .modal-header h1 {
-        color: white;
-    }
 
 .modal .model-content .modal-header .custom-close-btn {
     color: red;
