--- a/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/Web/Bookworm.Web/wwwroot/css/site.css
@@ -200,7 +200,7 @@ body {
     background-color: #dc3545;
 }
 
-.toast-header{
+.toast-header {
     font-size: 1.3rem;
 }
 
@@ -309,18 +309,39 @@ body {
     justify-content: center;
 }
 
-    .uploadBookSection form {
-        width: 80%;
+    .uploadBookSection form #addAuthorBtn {
+        background-color: var(--clr-secondary);
+    }
+
+        .uploadBookSection form #addAuthorBtn:hover {
+            color: black;
+        }
+
+    .uploadBookSection form button[type="submit"] {
+        background-color: var(--clr-secondary);
+        color: white;
+        padding: 0.5rem 2rem;
         border: solid 2px black;
+    }
+
+        .uploadBookSection form button[type="submit"]:hover {
+            color: black;
+        }
+
+    .uploadBookSection form {
+        width: 85%;
+        border: solid 2px var(--clr-secondary);
         border-radius: 15px;
         margin: 2rem 0;
         padding: 1rem;
         font-size: 1.2rem;
+        background-color: var(--clr-primary);
+        color: white;
     }
 
         .uploadBookSection form div input,
         .uploadBookSection form div select {
-            border: solid 2px black;
+            border: solid 2px var(--clr-secondary);
         }
 
         .uploadBookSection form div textarea {
@@ -582,6 +603,7 @@ body {
 .pagination .page-item a {
     border: solid 2px black;
 }
+
 .pagination > li > a {
     background-color: var(--clr-primary);
     color: var(--clr-white);
