--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
@@ -12,7 +12,7 @@ else
 {
     <h2 class="text-center pt-5">Manage Unapproved Books</h2>
     <div class="my-5">
-        <table class="table table-striped table-dark table-bordered" id="dataTable">
+        <table class="table table-dark table-bordered table-hover" id="dataTable">
             <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -47,10 +47,10 @@ else
                             </button>
                         </td>
                         <td class="text-center align-middle">
-                            <a asp-area="admin"
+                            <a target="_blank" asp-area=""
                                asp-controller="Book"
-                               asp-action="CurrentBook"
-                               asp-route-bookId="@Model[i].Id"
+                               asp-action="Details"
+                               asp-route-id="@Model[i].Id"
                                class="btn btn-success">
                                 <i class="fa-solid fa-expand fa-xl px-2"></i>
                             </a>
