--- a/Web/Bookworm.Web/Views/Book/Details.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Details.cshtml
@@ -69,27 +69,30 @@
            asp-route-id="@Model.Id">
             Download<i class="fas fa-download icon ms-2"></i>
         </a>
-        @if (Model.IsUserBook == false)
+        @if (Model.IsApproved)
         {
-            <button class="btn btn-lg button"
-                    data-bs-toggle="modal"
-                    data-bs-target="#ratingModal">
-                Rate Book<i class="fas fa-star icon ms-2"></i>
-            </button>
-        }
-        else
-        {
-            <a class="btn btn-lg button"
-               asp-controller="Book"
-               asp-action="Edit"
-               asp-route-bookId="@Model.Id">
-                Edit<i class="fas fa-user-pen icon ms-2"></i>
-            </a>
-            <a class="btn btn-lg button"
-               data-bs-toggle="modal"
-               data-bs-target="#deleteBookModal">
-                Delete<i class="fas fa-trash-can icon ms-2"></i>
-            </a>
+            @if (Model.IsUserBook == false)
+            {
+                <button class="btn btn-lg button"
+                        data-bs-toggle="modal"
+                        data-bs-target="#ratingModal">
+                    Rate Book<i class="fas fa-star icon ms-2"></i>
+                </button>
+            }
+            else
+            {
+                <a class="btn btn-lg button"
+                   asp-controller="Book"
+                   asp-action="Edit"
+                   asp-route-bookId="@Model.Id">
+                    Edit<i class="fas fa-user-pen icon ms-2"></i>
+                </a>
+                <a class="btn btn-lg button"
+                   data-bs-toggle="modal"
+                   data-bs-target="#deleteBookModal">
+                    Delete<i class="fas fa-trash-can icon ms-2"></i>
+                </a>
+            }
         }
     </section>
 }
@@ -105,102 +108,105 @@
     </div>
 </section>
 
-<section class="bookDetailsCommentsSection">
-    <div class="formContainer">
-        <form method="post" asp-controller="Comment" asp-action="Post">
-            <input type="hidden" asp-for="PostComment.BookId" value="@Model.Id" />
-            <div class="form-group">
-                <textarea asp-for="PostComment.Content" class="form-control" rows="15"></textarea>
-                <span asp-validation-for="PostComment.Content" class="text-danger"></span>
-            </div>
-            <div class="text-center mt-4">
-                <button type="submit" class="button btn btn-lg">
-                    Post Comment<i class="fa-solid fa-comment ms-2"></i>
-                </button>
-            </div>
-        </form>
-    </div>
-    @if (Model.Comments?.Count() > 0)
-    {
-        <section class="commentsSection">
-            <h2>Comments: @Model.Comments.Count()</h2>
-            @if (Model.Comments.Count() > 1 && this.SignInManager.IsSignedIn(this.User))
-            {
-                <div class="sortCommentsBtnsContainer">
-                    <div class="btn-group"
-                         role="group"
-                         aria-label="Basic radio toggle button group">
-                        <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByDateAsc" autocomplete="off" onclick="getSortedCommentsByDateAsc()">
-                        <label class="btn border border-2" for="sortCommentsByDateAsc">Sort by date asc</label>
-
-                        <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByDateDesc" autocomplete="off" onclick="getSortedCommentsByDateDesc()" checked>
-                        <label class="btn border border-2" for="sortCommentsByDateDesc">Sort by date desc</label>
-
-                        <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByNetWorthDesc" autocomplete="off" onclick="getSortedCommentsByNetWorthDesc()">
-                        <label class="btn border border-2" for="sortCommentsByNetWorthDesc">Sort by net worth desc</label>
-                    </div>
+@if (Model.IsApproved)
+{
+    <section class="bookDetailsCommentsSection">
+        <div class="formContainer">
+            <form method="post" asp-controller="Comment" asp-action="Post">
+                <input type="hidden" asp-for="PostComment.BookId" value="@Model.Id" />
+                <div class="form-group">
+                    <textarea asp-for="PostComment.Content" class="form-control" rows="15"></textarea>
+                    <span asp-validation-for="PostComment.Content" class="text-danger"></span>
                 </div>
-            }
-            <div class="commentsContainer">
-                @foreach (CommentViewModel comment in Model.Comments)
+                <div class="text-center mt-4">
+                    <button type="submit" class="button btn btn-lg">
+                        Post Comment<i class="fa-solid fa-comment ms-2"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+        @if (Model.Comments?.Count() > 0)
+        {
+            <section class="commentsSection">
+                <h2>Comments: @Model.Comments.Count()</h2>
+                @if (Model.Comments.Count() > 1 && this.SignInManager.IsSignedIn(this.User))
                 {
-                    <article class="card">
-                        <div class="card-header">
-                            <span>Posted by - @comment.UserUserName</span>
-                            @if (this.SignInManager.IsSignedIn(this.User))
-                            {
-                                <div class="commentActionsContainer">
-                                    <div class="arrowsContainer">
-                                        @if (!comment.IsCommentOwner)
-                                        {
-                                            <i onclick=onUpArrowClick(this)
-                                               data-model-id=@comment.Id
-                                               class="fas fa-circle-up hover @(comment.UserVoteValue == 1 ? "greenUpArrow" : "")">
-                                            </i>
+                    <div class="sortCommentsBtnsContainer">
+                        <div class="btn-group"
+                             role="group"
+                             aria-label="Basic radio toggle button group">
+                            <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByDateAsc" autocomplete="off" onclick="getSortedCommentsByDateAsc()">
+                            <label class="btn border border-2" for="sortCommentsByDateAsc">Sort by date asc</label>
 
-                                            <span>@comment.NetWorth</span>
+                            <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByDateDesc" autocomplete="off" onclick="getSortedCommentsByDateDesc()" checked>
+                            <label class="btn border border-2" for="sortCommentsByDateDesc">Sort by date desc</label>
 
-                                            <i onclick=onDownArrowClick(this)
-                                               data-model-id=@comment.Id
-                                               class="fas fa-circle-down hover @(comment.UserVoteValue == -1 ? "redDownArrow" : "")">
-                                            </i>
-                                        }
-                                        else
+                            <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByNetWorthDesc" autocomplete="off" onclick="getSortedCommentsByNetWorthDesc()">
+                            <label class="btn border border-2" for="sortCommentsByNetWorthDesc">Sort by net worth desc</label>
+                        </div>
+                    </div>
+                }
+                <div class="commentsContainer">
+                    @foreach (CommentViewModel comment in Model.Comments)
+                    {
+                        <article class="card">
+                            <div class="card-header">
+                                <span>Posted by - @comment.UserUserName</span>
+                                @if (this.SignInManager.IsSignedIn(this.User))
+                                {
+                                    <div class="commentActionsContainer">
+                                        <div class="arrowsContainer">
+                                            @if (!comment.IsCommentOwner)
+                                            {
+                                                <i onclick=onUpArrowClick(this)
+                                                   data-model-id=@comment.Id
+                                                   class="fas fa-circle-up hover @(comment.UserVoteValue == 1 ? "greenUpArrow" : "")">
+                                                </i>
+
+                                                <span>@comment.NetWorth</span>
+
+                                                <i onclick=onDownArrowClick(this)
+                                                   data-model-id=@comment.Id
+                                                   class="fas fa-circle-down hover @(comment.UserVoteValue == -1 ? "redDownArrow" : "")">
+                                                </i>
+                                            }
+                                            else
+                                            {
+                                                <i class="fas fa-circle-up"></i>
+                                                <span>@comment.NetWorth</span>
+                                                <i class="fas fa-circle-down"></i>
+                                            }
+                                        </div>
+                                        @if (comment.IsCommentOwner || this.User.IsInRole(GlobalConstants.AdministratorRoleName))
                                         {
-                                            <i class="fas fa-circle-up"></i>
-                                            <span>@comment.NetWorth</span>
-                                            <i class="fas fa-circle-down"></i>
+                                            <button class="btn btn-lg btn-danger modalBtn"
+                                                    data-model-id=@comment.Id
+                                                    data-bs-toggle="modal"
+                                                    data-bs-target="#deleteModal"
+                                                    onclick="onDeleteCommentBtnClick(this)">
+                                                Delete
+                                            </button>
+                                            <button class="btn btn-lg btn-warning modalBtn"
+                                                    onclick="onEditCommentBtnClick(this)"
+                                                    data-model-id=@comment.Id
+                                                    data-bs-toggle="modal"
+                                                    data-bs-target="#editModal">
+                                                Edit
+                                            </button>
                                         }
                                     </div>
-                                    @if (comment.IsCommentOwner || this.User.IsInRole(GlobalConstants.AdministratorRoleName))
-                                    {
-                                        <button class="btn btn-lg btn-danger modalBtn"
-                                                data-model-id=@comment.Id
-                                                data-bs-toggle="modal"
-                                                data-bs-target="#deleteModal"
-                                                onclick="onDeleteCommentBtnClick(this)">
-                                            Delete
-                                        </button>
-                                        <button class="btn btn-lg btn-warning modalBtn"
-                                                onclick="onEditCommentBtnClick(this)"
-                                                data-model-id=@comment.Id
-                                                data-bs-toggle="modal"
-                                                data-bs-target="#editModal">
-                                            Edit
-                                        </button>
-                                    }
-                                </div>
-                            }
-                        </div>
-                        <div class="card-body">
-                            @Html.Raw(@comment.SanitizedContent)
-                        </div>
-                    </article>
-                }
-            </div>
-        </section>
-    }
-</section>
+                                }
+                            </div>
+                            <div class="card-body">
+                                @Html.Raw(@comment.SanitizedContent)
+                            </div>
+                        </article>
+                    }
+                </div>
+            </section>
+        }
+    </section>
+}
 
 <partial name="PartialViews/Modals/_DeleteBookModalPartial" />
 <partial name="PartialViews/Modals/_EditCommentModalPartial" />
