Update AddUserPoints migration

--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     this.ViewData["Title"] = "Home Page";
 }
 
-<section class="welcomeSection mt-5">
+@* <section class="welcomeSection mt-5">
     <h1 class="text-center mb-5">Welcome to @GlobalConstants.SystemName!</h1>
     <div class="card mb-5 col-8 d-flex justify-content-center mx-auto border-2 border-dark">
         <div class="card-header fs-4">
@@ -34,7 +34,7 @@
             </blockquote>
         </div>
     </div>
-</section>
+</section> *@
 
 @if (this.User.Identity.IsAuthenticated)
 {
