--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,6 +1,10 @@
 ﻿@page
 @model LoginModel
 
+@{
+    this.ViewData["Title"] = "Login";
+}
+
 <div class="loginRegisterContainer my-5">
     <img
         src="~/images/login.jpg"
@@ -10,6 +14,7 @@
         <h5 class="text-center text-uppercase fs-2">Login</h5>
         <partial name="PartialViews/_CustomDividerPartial" />
         <form id="account" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username">
                 <label asp-for="Input.UserName"></label>
