--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,24 +6,18 @@
 }
 
 <div class="loginRegisterContainer my-5">
-    <img
-        src="~/images/login.jpg"
-        class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster"
-        alt="Books Image..." />
+    <img src="~/images/login.jpg"
+         class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster"
+         alt="Books Image..." />
     <div class="loginRegisterForm animate__animated animate__fadeInRight animate__faster">
-        <h5 class="text-center text-uppercase fs-2">Login</h5>
-        <partial name="PartialViews/_CustomDividerPartial" />
         <form id="account" method="post">
+            <h5 class="text-center text-uppercase fs-2">Login</h5>
+            <partial name="PartialViews/_CustomDividerPartial" />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username">
                 <label asp-for="Input.UserName"></label>
                 <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input type="email" asp-for="Input.Email" class="form-control border border-2 mt-3" placeholder="name@example.com" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
                 <input type="password" asp-for="Input.Password" class="form-control border border-2 mt-3" placeholder="Password" />
@@ -32,43 +26,54 @@
             </div>
             <div class="form-group my-3">
                 <div class="checkbox">
-                    <label asp-for="Input.RememberMe" class="d-flex align-items-center gap-3">
+                    <label asp-for="Input.RememberMe" class="d-flex align-items-center gap-2 rememberMe">
                         <input asp-for="Input.RememberMe" />
                         @Html.DisplayNameFor(m => m.Input.RememberMe)
                     </label>
                 </div>
             </div>
             <div class="text-center">
-                <button type="submit" class="btn button btn-lg">Login</button>
+                <button type="submit" class="btn btn-lg">Login<i class="fa fa-right-to-bracket ms-2"></i></button>
+            </div>
+            <div class="mt-3">
+                @{
+                    if ((Model.ExternalLogins?.Count ?? 0) != 0)
+                    {
+                        <div class="text-center">
+                            <span class="fs-5">Or use another service to log in:</span>
+                        </div>
+                        <form id="external-account"
+                              asp-page="./ExternalLogin"
+                              asp-route-returnUrl="@Model.ReturnUrl"
+                              method="post"
+                              class="form-horizontal">
+                            @foreach (var provider in Model.ExternalLogins)
+                            {
+                                <div class="text-center">
+                                    <button type="submit"
+                                            class="btn btn-lg my-3"
+                                            name="provider"
+                                            value="@provider.Name"
+                                            title="Log in using your @provider.DisplayName account">
+                                        @provider.DisplayName<i class="fab fa-facebook ms-1"></i>
+                                    </button>
+                                </div>
+                            }
+                        </form>
+                    }
+                }
+                <div class="text-center">
+                    <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
+                </div>
+                <div class="text-center">
+                    <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                </div>
+                <div class="text-center">
+                    <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
+                </div>
             </div>
         </form>
-        <div class="mt-3">
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) != 0)
-                {
-                    <div class="text-center">
-                        <span class="fs-5">Or use another service to log in:</span>
-                    </div>
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        @foreach (var provider in Model.ExternalLogins)
-                        {
-                            <div class="text-center">
-                                <button type="submit" class="btn button btn-lg my-3" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName<i class="fab fa-facebook ms-1"></i></button>
-                            </div>
-                        }
-                    </form>
-                }
-            }
-            <div class="text-center">
-                <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
-            </div>
-            <div class="text-center">
-                <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-            </div>
-            <div class="text-center">
-                <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
-            </div>
-        </div>
+        
     </div>
 </div>
 
