--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,19 +7,21 @@
 }
 
 <div class="loginRegisterContainer my-5">
-    <img src="~/images/register.jpg" class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster" alt="Books Image...">
+    <img src="~/images/register.jpg"
+         class="loginRegisterImg rounded-4 img-fluid animate__animated animate__fadeInLeft animate__faster"
+         alt="Books Image...">
     <div class="loginRegisterForm animate__animated animate__fadeInRight animate__faster">
-        <h5 class="text-center text-uppercase fs-2">Register</h5>
-        <partial name="PartialViews/_CustomDividerPartial" />
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
+        <form id="account" asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
+            <h5 class="text-center text-uppercase fs-2">Register</h5>
+            <partial name="PartialViews/_CustomDividerPartial" />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Input.UserName" class="form-control border border-2" placeholder="username" />
+                <input asp-for="Input.UserName" class="form-control border-2" placeholder="username" />
                 <label asp-for="Input.UserName"></label>
                 <span asp-validation-for="Input.UserName" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control border border-2 mt-3" placeholder="name@example.com" />
+                <input asp-for="Input.Email" class="form-control border-2 mt-3" placeholder="name@example.com" />
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
@@ -34,16 +36,16 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group text-center my-4">
-                <button type="submit" class="btn button btn-lg">Register</button>
+                <button type="submit" class="btn btn-lg">Register<i class="fa-solid fa-user-plus ms-2"></i></button>
             </div>
-
+            <div class="text-center">
+                <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
+            </div>
+            <div class="text-center">
+                <a class="form-link" asp-page="./Login">Already have an account? Login!</a>
+            </div>
         </form>
-        <div class="text-center">
-            <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
-        </div>
-        <div class="text-center">
-            <a class="form-link" asp-page="./Login">Already have an account? Login!</a>
-        </div>
+
     </div>
 </div>
 
