--- a/Web/Bookworm.Web/Views/Book/Details.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Details.cshtml
@@ -1,12 +1,13 @@
 ﻿@model BookViewModel
-@using Bookworm.Data.Models
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<ApplicationUser> SignInManager
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
 
 @{
     this.ViewData["Title"] = Model.Title;
     string requestToken = Antiforgery.GetAndStoreTokens(Context).RequestToken;
+}
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/bookDetails.css" asp-append-version="true" />
 }
 
 <input id="RequestVerificationToken" type="hidden" value="@requestToken" />
@@ -17,7 +18,7 @@
     </div>
     <ul class="list-group">
         <li class="list-group-item">
-            <strong>@Model.Title</strong> - <span class="fst-italic">uploaded by @Model.Username</span>
+            <strong>@Model.Title</strong>
         </li>
         @if (Model.PublisherName != null)
         {
@@ -49,18 +50,15 @@
             <span>(Ratings count: <span class="bookRatingsCount">@Model.RatingsCount</span>)</span>
         </li>
         <li class="list-group-item">
-            <dl>
-                <dt>Authors:</dt>
-                @foreach (var author in Model.Authors)
-                {
-                    <dd>- @author</dd>
-                }
-            </dl>
+            <span> Authors: @string.Join(",", Model.Authors)</span>
+        </li>
+        <li class="list-group-item">
+            <span>uploaded by - @Model.Username</span>
         </li>
     </ul>
 </section>
 
-@if (this.SignInManager.IsSignedIn(this.User))
+@if (this.User.Identity.IsAuthenticated)
 {
     <section class="bookDetailsActionsSection">
         <a class="btn btn-lg button"
@@ -129,22 +127,9 @@
         {
             <section class="commentsSection">
                 <h2>Comments: @Model.Comments.Count()</h2>
-                @if (Model.Comments.Count() > 1 && this.SignInManager.IsSignedIn(this.User))
+                @if (Model.Comments.Count() > 1 && this.User.Identity.IsAuthenticated)
                 {
-                    <div class="sortCommentsBtnsContainer">
-                        <div class="btn-group"
-                             role="group"
-                             aria-label="Basic radio toggle button group">
-                            <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByDateAsc" autocomplete="off" onclick="getSortedCommentsByDateAsc()">
-                            <label class="btn border border-2" for="sortCommentsByDateAsc">Sort by date asc</label>
-
-                            <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByDateDesc" autocomplete="off" onclick="getSortedCommentsByDateDesc()" checked>
-                            <label class="btn border border-2" for="sortCommentsByDateDesc">Sort by date desc</label>
-
-                            <input type="radio" class="btn-check" name="btnradio" id="sortCommentsByNetWorthDesc" autocomplete="off" onclick="getSortedCommentsByNetWorthDesc()">
-                            <label class="btn border border-2" for="sortCommentsByNetWorthDesc">Sort by net worth desc</label>
-                        </div>
-                    </div>
+                    <partial name="PartialViews/_CommentsButtonsPartial"/>
                 }
                 <div class="commentsContainer">
                     @foreach (CommentViewModel comment in Model.Comments)
@@ -152,7 +137,7 @@
                         <article class="card">
                             <div class="card-header">
                                 <span>Posted by - @comment.UserUserName</span>
-                                @if (this.SignInManager.IsSignedIn(this.User))
+                                @if (this.User.Identity.IsAuthenticated)
                                 {
                                     <div class="commentActionsContainer">
                                         <div class="arrowsContainer">
@@ -198,7 +183,7 @@
                                 }
                             </div>
                             <div class="card-body">
-                                @Html.Raw(@comment.SanitizedContent)
+                                @Html.Raw(comment.SanitizedContent)
                             </div>
                         </article>
                     }
@@ -214,8 +199,8 @@
 <partial name="PartialViews/Modals/_RateBookModalPartial" />
 
 @section Scripts {
-    <script src="~/js/rating.js"></script>
     <script src="~/js/vote.js"></script>
+    <script src="~/js/rating.js"></script>
     <script src="~/js/comments.js"></script>
     <script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
     <script type="text/javascript">
