--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksTablePartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksTablePartial.cshtml
@@ -4,7 +4,7 @@
 
 @if (Model.Count == 0)
 {
-    <h2 class="text-center pt-5">
+    <h3 class="text-center pt-5 display-3">
         @if (title == "Approved Books")
         {
             <text>There are no approved books yet!</text>
@@ -17,7 +17,7 @@
         {
             <text>There are no deleted books!</text>
         }
-    </h2>
+    </h3>
 }
 else
 {
